<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A42BB8"
    tools:context=".ui.UserActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        android:gravity="center"
        android:hint="@string/your_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/black"
        android:textSize="23sp" />


    <Button
        android:id="@+id/button_save"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:backgroundTint="#D283DF"
        android:text="@string/save" />


</RelativeLayout>