<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/layout_Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A42BB8"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_all"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_all" />

        <ImageView
            android:id="@+id/image_emotions"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_emotions"
            app:tint="#433F3F" />

        <ImageView
            android:id="@+id/image_sunny"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_sunny"
            app:tint="#433F3F" />

    </LinearLayout>


    <TextView
        android:id="@+id/text_Hi_kotlin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_Linear"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/ol_kotlin"
        android:textSize="14dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_centerText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/asul"
        android:gravity="center"
        android:text="@string/center_phrase"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:layout_below="@id/text_centerText"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        android:backgroundTint="#A42BB8"
        android:elevation="5dp" />

    <Button
        android:id="@+id/button_newPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#A42BB8"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/new_phrase"
        android:textAllCaps="true"
        android:textStyle="bold" />


</RelativeLayout>